# fund_analysis

./: README.md  generate_report.py  main.py  pyproject.toml
output/: best_fund_by_month.xlsx  perf_monthly.xlsx  price_recon.xlsx
src/models/: equity_price.py  equity_reference.py  external_fund.py  file_mapping_config.py  report_input.py
src/repositories/: equity_price_repo.py  equity_reference_repo.py  external_funds_repo.py  price_repo.py
src/repositories/file_mapping/: file_mapping_config.yml
src/services/: report_service.py
src/utils/: common.py  database_utils.py  file_handler.py
tests/: conftest.py  test_common.py  test_database_utils.py  test_equity_price.py  test_equity_price_repo.py  test_external_funds_repo.py  test_file_handler.py  test_price_repo.py  test_report_service.py  test_validate_schema.py
tests/resources/: Applebead.30-11-2022 breakdown-test.csv
